--- a/client/src/containers/CSS/HomePage.css
+++ b/client/src/containers/CSS/HomePage.css
@@ -1,6 +1,10 @@
+.page {
+  margin-top: 20px;
+}
 .content{
-  margin-top: 20px
+  margin-top: 20px;
 }
 .card {
   margin-top: 10px;
+  background-color: #424242;
 }
